fix: modified task of javafx & exported outputs